# brand-conscience

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
config/: settings.production.yaml  settings.test.yaml  settings.yaml
data/: prompt_performance.json  prompt_performance_v2.json
docs/: api-keys.md  architecture.md  build-overview.md  deployment.md  local-dev.md  models.md  monitoring.md  observability.md  overview.md  safety.md  use-cases.md  workflow.md
scripts/: bootstrap_historical.py  generate_prompt_training_data.py  seed_db.py  test_prompt_scorer.py  train_prompt_scorer.py  train_quality_classifier.py
src/brand_conscience/: __init__.py  app.py  celery_app.py  cli.py
src/brand_conscience/common/: checkpointing.py  config.py  database.py  exceptions.py  logging.py  notifications.py  tracing.py  types.py
src/brand_conscience/db/: queries.py  tables.py
src/brand_conscience/layer0_awareness/: business_monitor.py  creative_monitor.py  cultural_monitor.py  graph.py  moment_profile.py  signals.py  tasks.py
src/brand_conscience/layer1_strategy/: audience_selector.py  budget_allocator.py  (+4 more)
tests/: conftest.py  factories.py
tests/e2e/: conftest.py  test_full_pipeline.py
tests/integration/: test_campaign_lifecycle.py  test_celery_tasks.py  test_layer0_to_layer1.py  test_layer2_to_layer3.py
tests/unit/: test_config.py  test_database.py  test_impact_matcher.py  test_safety.py  test_safety_gate.py
(+55 files in other folders)
